rename Forward into ForwardDest, Forwards into Forward, FormardList into ForwardDestList
